--- a/src/components/OrderAssistant.css
+++ b/src/components/OrderAssistant.css
@@ -5,6 +5,7 @@
   align-items: center;
   min-height: 100%;
   padding-bottom: 2rem;
+  padding: 0 20px;
   /* Unified slim scrollbar variables */
   --sb-size: 6px;
   --sb-track: #f1f1f1;
